# daiya-rmt

./: .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  hello.py  pyproject.toml
.impeccable/: design.json
.impeccable/live/: config.json
daiya/: pyproject.toml
daiya/src/daiya/: __init__.py  asr.py  audio.py  cli.py  correct.py  diarizer.py  mux.py  pipeline.py  server.py  web.py
daiya/tests/: test_asr.py  test_asr_eval.py  test_cli.py  test_mux.py  test_pipeline.py  test_server.py  test_vad_bakeoff.py
daiya/web/: .gitignore  PRODUCT.md  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
daiya/web/public/worklets/: pcm-worklet.js
daiya/web/src/: App.tsx  api.ts  styles.css
daiya/web/src/audio/: mic.ts
docs/: m2-asr-model-state.md  realtime-diarization-implementation-plan.md  short-utterance-decoding-policy.md  v0-prototype-plan.md
docs/experiments/: dataset-audit.md  generation-gated-checkpoint-selection.md  m3-prompt-conditioned-whisper.md  m31-training-harness-migration.md  offline-whisper-wall-clock-segmentation-2026-07.md  pr10-pr13-integration-benchmark.md  pr4-vad-segment-bakeoff.md  pr6-word-speaker-mux-boundaries.md  right-context-lookahead-asr-finalization.md  timestamp-ownership-segmentation-2026-07.md
docs/experiments/asr-dataset-cleaning-v1/: README.md  evaluation-summary.json
docs/experiments/asr-dataset-validation-v1/: README.md  candidate-manifest-v1.sample.jsonl  evaluation-summary.json  spelling-audit-v2.json
docs/experiments/dataset-audit-fixtures/: audit-summary.json
docs/experiments/m31/: README.md  m31-benchmark-v1.jsonl  m31-generation-gate-v1.jsonl  m31-split-v1.jsonl  report.md
docs/experiments/m31/raw/: SHA256SUMS  benchmark-primary-exit.json  benchmark-primary-launch.json  benchmark-primary-summary-original.json  benchmark-primary-summary.json  generation-probe-isolated-details.jsonl  generation-probe-isolated-exit.json  generation-probe-isolated-launch.json  generation-probe-isolated-summary.json  generation-probe-rolling-details.jsonl  generation-probe-rolling-exit.json  generation-probe-rolling-launch.json  generation-probe-rolling-summary.json  legacy-split-audit.json  merge-checkpoint-500-exit.json  merge-checkpoint-500-launch.json  merge-checkpoint-588-exit.json  merge-checkpoint-588-launch.json  training-exit.json  training-launch.json  training-provenance.json
docs/research/asr-context-accuracy/: 01-project-landscape.md  02-training-finetune-methods.md  03-runtime-context-and-streaming.md  04-contextual-biasing-hotwords-rescoring.md  05-llm-correction-and-multipass.md  06-diarization-aware-asr.md  07-actionable-daiya-experiments.md
docs/research/asr-dataset-cleaning/: practical-methods.md  spelling-validation.md
docs/research/asr-dataset-validation/: practical-methods.md  spelling-validation.md
lab/: .gitignore  asr_eval.py  diarization_probe.py  test_asr_eval.py  vad_bakeoff.py
lab/statefull-diarization/: .env.example  README.md  backends.py  benchmark_stage6.py  demo.py  metrics.py  pyproject.toml  realtime.py  speaker_memory.py  test_realtime.py  timeline.py
lab/statefull-diarization/artifacts/stage6-benchmark-pr6/: Th-En_sample_02-balanced-offline-reference.rttm  Th-En_sample_02-balanced.json  Th-En_sample_02-daiya-balanced.csv  summary-balanced.json
training/dataset/manual-label/m2-label-ref/: .gitignore  ref_labels.txt
training/dataset_cleaning/: README.md  pyproject.toml
training/dataset_cleaning/scripts/: build_candidate_manifest.py  evaluate_gold.py  run_spelling_validation.py
training/dataset_cleaning/src/daiya_dataset_cleaning/: __init__.py  decision.py  io.py  models.py  signals.py  spelling.py
training/dataset_cleaning/tests/: test_experiment_scripts.py  test_toolkit.py
training/harness/: .gitignore  README.md  pyproject.toml
training/harness/src/daiya_training_harness/: __init__.py  benchmark.py  prompting.py  provenance.py  recipes.py  selection.py  splits.py
training/harness/tests/: test_benchmark.py  test_contract_integration.py  test_prompting.py  test_provenance.py  test_recipes.py  test_selection.py  test_splits.py
training/processor/whisper/: .env.example  .gitignore  README.md  docs-dataset-validation.md  pyproject.toml
training/processor/whisper/dataset-validation/: README.md  pyproject.toml
training/processor/whisper/dataset-validation/scripts/: evaluate_gold.py
training/processor/whisper/dataset-validation/tests/: test_experiment_scripts.py  test_toolkit.py
training/processor/whisper/scripts/: benchmark_segmentation.py  benchmark_timestamp_ownership.py  build_candidate_manifest.py  map_segmentation_reviews.py  run_spelling_validation.py
training/processor/whisper/tests/: conftest.py  test_evidence.py  test_review_mapping.py  test_safe_concurrency.py  test_segmentation.py  test_timestamp_benchmark.py  test_web_launcher.py
training/processor/whisper/web/: .gitignore  README.md  index.html  package.json  server.py  tailwind.config.ts  test_server.py  vite.config.ts
training/processor/whisper/web/scripts/: dev.mjs  (+2 more)
training/whisper/: .gitignore  README.md  pyproject.toml
training/whisper/scripts/: build_m31_manifests.py  monitor_job.ps1  monitor_m31_training.ps1  run_m31_benchmark.ps1  run_m31_merge.ps1  run_m31_probe.ps1  run_m31_training.ps1
training/whisper/src/daiya_whisper_lora/: __init__.py  checkpoint_probe.py  cli.py  metrics.py  prompt_conditioning.py  provenance.py  split_manifest.py  train.py
training/whisper/tests/: test_generation_gate.py  test_prompt_conditioning.py  test_provenance.py  test_split_manifest.py  test_training_eligibility.py
trainning/processor/whisper/: .env.example  .gitignore  README.md  pyproject.toml
trainning/processor/whisper/src/daiya_whisper_pipeline/: config.py  export.py  llm.py  pipeline.py  segmentation.py  types.py  vad.py
trainning/whisper/: README.md  pyproject.toml
trainning/whisper/src/daiya_whisper_lora/: cli.py  merge.py  train.py
(+26 files in other folders)
