[project]
name = "daiya-rmt"
version = "0.0.1"
description = "(Near) Real-time Mixed-lingual Transcription optimized for technical meetings transcription. Powered by audio-capable LLMs and Pyannote."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
   "daiya",
   "lab/statefull-diarization",
   "trainning/processor/whisper",
   "trainning/whisper",
]
