[project]
name = "daiya-dataset-cleaning"
version = "0.1.0"
description = "Dependency-light, non-mutating ASR dataset cleaning baselines."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
spelling-th = ["pythainlp>=5.3,<6"]
spelling-ja = ["sudachipy>=0.6.10,<0.7", "sudachidict-core"]
spelling-en = ["symspellpy>=6.9,<7"]
spelling = [
  "pythainlp>=5.3,<6",
  "sudachipy>=0.6.10,<0.7",
  "sudachidict-core",
  "symspellpy>=6.9,<7",
]

[project.scripts]
daiya-clean-dataset = "daiya_dataset_cleaning.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daiya_dataset_cleaning"]
