[project]
name = "daiya-training-harness"
version = "0.1.0"
description = "Portable experiment contracts and fixture-based validation for Daiya ASR training."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0,<9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daiya_training_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
